<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bai Ze Book House</string>
    <string name="hello_world">2B Sister</string>
    <string name="sent">Sent</string>
    <string name="deleteMessage">DeleteAll</string>
    <string name="inputEmpty">Input can not be NULL</string>
    <string name="showOnlineNumber">Show Online Number</string>
    <string name="loginTitle">Bai Ze Book House</string>
    <string name="controlBookTitle">Manage Books</string>
    <string name="queryBookTitle">Book inquiry</string>
    <string name="queryStudentTitle">Student inquiry</string>
    <string name="myBookTitle">My Books</string>
    <string name="addBookTitle">Add Books</string>
    <string name="changePasswordTitle">Change Password</string>
    <string name="loginBotton">Login</string>
    <string name="register">Register</string>
    <string name="ChangePassword">Change Code</string>
    <string name="queryButton">Search</string>
    <string name="passwordError">Error Password</string>
    <string name="usernameError">Username Exists</string>
    <string name="booknameError">Bookname Exists</string>
    <string name="passwordConfirmError">Inconsistent Passwords</string>
    <string name="usernameHint">Please input your username.</string>
    <string name="passwordHint">Please input your password.</string>
    <string name="usernameHintChange">Please input your username.</string>
    <string name="passwordHintChange">Please input your original password.</string>
    <string name="passwordHintNew">Please input your NEW password.</string>
    <string name="usernameHintRegister">Please set your username.</string>
    <string name="passwordHintRegister">Please set your password.</string>
    <string name="passwordHintConfirm">Please confirm your password.</string>
    <string name="bookNameHint">Name of book</string>
    <string name="bookAuthorHint">Author of book</string>
    <string name="bookNumberHint">Quantity of book</string>
    <string name="searchHint">title/author/book ID.</string>
    <string name="searchStudentHint">User name</string>
    <string name="numberHint">Num</string>
    <string name="controlBook">Manage Books</string>
    <string name="insertBook">Add Books</string>
    <string name="queryBook">Query Books</string>
    <string name="queryStudent">Query Students</string>
    <string name="addBook">Add</string>
    <string name="confirm">Confirm</string>
    <string name="myBook">My Books</string>
    <string name="chatRoom">Chat Room</string>
    <string name="bookId">ID:</string>
    <string name="bookAuthor">Author:</string>
    <string name="bookHave">In stock:</string>
    <string name="bookBorrow">Borrowed:</string>
    <string name="bookStart">Start:</string>
    <string name="bookEnd">End:</string>
    <string name="btBorrow">Borrow</string>
    <string name="btReturn">Return</string>
    <string name="totally">total</string>
    <string name="Hello">Hello,</string>
    <string name="bookUnit">books</string>
    <string name="IDofBook">ID</string>
    <string name="NameofBook">Title</string>
    <string name="AuthorofBook">Author</string>
    <string name="btAdd">Add</string>
    <string name="btDec">Sub</string>
    <string name="btDelete">Delete</string>
    <string name="btDeleteS">Delete this man</string>
    <string name="Error_Empty">Input can not be NULL</string>
    <string name="Error_Query">Not found</string>
    <string name="Error_Query_next">No more</string>
    <string name="Error_Insert1">Error Delete</string>
    <string name="Error_DeleteB">Books not Return</string>
    <string name="Error_Student">No such student</string>
    <string name="Error_DeleteS">Can not Delete unreturned user</string>
    <string name="Error_Borrow0">No more than 5 books</string>
    <string name="Error_Borrow1">Some Book timed out, can not borrow</string>
    <string name="Info_Borrow">Borrowing Success</string>
    <string name="Info_Return">Returning Success</string>
    <string name="Info_Register">Register Success</string>
    <string name="Info_Modify">Modify password Success</string>
    <string name="Info_Insert0">Adding Success</string>
    <string name="Info_Insert1">Reduce success</string>
    <string name="Info_Insert2">Creating Success</string>
    <string name="Info_DeleteB">Delete Success</string>
    <string name="Info_DeleteS">Delete Success</string>
</resources>