<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/controlBookTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch">

        <RadioButton
            android:id="@+id/rbID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/IDofBook" />

        <RadioButton
            android:id="@+id/rbName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/NameofBook" />

        <RadioButton
            android:id="@+id/rbAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/AuthorofBook" />
    </RadioGroup>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/searchHint"
        android:inputType="none"
        android:lines="1"
        app:layout_constraintBottom_toBottomOf="@+id/btSearch"
        app:layout_constraintEnd_toStartOf="@+id/btSearch"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btSearch"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/bg_sent"
        android:onClick="onSearch"
        android:padding="6dp"
        android:text="@string/queryButton"
        android:textColor="@color/colorMessege"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/bookRecycleView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</android.support.constraint.ConstraintLayout>