<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginLeft="50dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="50dp"
    android:layout_marginBottom="8dp"
    android:padding="6dp"
    card_view:cardBackgroundColor="@color/colorPrimary"
    card_view:cardCornerRadius="28dp"
    card_view:cardElevation="6dp">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/book_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="TextView"
            android:textColor="@color/colorMessege"
            android:textSize="15dp"
            android:textStyle="normal|bold"
            android:typeface="monospace"
            card_view:layout_constraintBottom_toTopOf="@+id/cardView"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/bt_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/btAdd"
            android:textColor="@color/colorMessege"
            android:textSize="18dp"
            android:textStyle="normal|bold"
            android:typeface="monospace"
            android:visibility="visible"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/ed_add"
            card_view:layout_constraintTop_toBottomOf="@+id/cardView" />

        <EditText
            android:id="@+id/ed_add"
            android:layout_width="45dp"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="1dp"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorMessege"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/bt_dec"
            card_view:layout_constraintTop_toBottomOf="@+id/cardView" />

        <TextView
            android:id="@+id/bt_dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/btDec"
            android:textColor="@color/colorMessege"
            android:textSize="18dp"
            android:textStyle="normal|bold"
            android:typeface="monospace"
            android:visibility="visible"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toStartOf="@+id/ed_dec"
            card_view:layout_constraintTop_toBottomOf="@+id/cardView" />

        <EditText
            android:id="@+id/ed_dec"
            android:layout_width="45dp"
            android:layout_height="39dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:inputType="number"
            android:textColor="@color/colorMessege"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/cardView" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="73dp"
            android:layout_marginBottom="40dp"
            card_view:cardCornerRadius="0dp"
            card_view:cardElevation="0dp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/book_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="TextView"
                    android:typeface="serif"
                    card_view:layout_constraintStart_toEndOf="@+id/label_id"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bt_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/btDelete"
                    android:textSize="18dp"
                    android:textStyle="normal|bold"
                    android:typeface="monospace"
                    android:visibility="visible"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="TextView"
                    android:typeface="serif"
                    card_view:layout_constraintStart_toEndOf="@+id/label_author"
                    card_view:layout_constraintTop_toBottomOf="@+id/book_id" />

                <TextView
                    android:id="@+id/book_have"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:typeface="serif"
                    card_view:layout_constraintBottom_toBottomOf="@+id/label_have"
                    card_view:layout_constraintStart_toEndOf="@+id/label_have" />

                <TextView
                    android:id="@+id/book_borrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:typeface="serif"
                    card_view:layout_constraintBottom_toBottomOf="@+id/label_borrow"
                    card_view:layout_constraintStart_toEndOf="@+id/label_borrow" />

                <TextView
                    android:id="@+id/label_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/bookId"
                    android:typeface="serif"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/label_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/bookAuthor"
                    android:typeface="serif"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/label_id" />

                <TextView
                    android:id="@+id/label_have"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/bookHave"
                    android:typeface="serif"
                    card_view:layout_constraintBottom_toBottomOf="parent"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toBottomOf="@+id/label_author" />

                <TextView
                    android:id="@+id/label_borrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/bookBorrow"
                    android:typeface="serif"
                    card_view:layout_constraintBottom_toBottomOf="@+id/book_have"
                    card_view:layout_constraintStart_toEndOf="@+id/book_have" />

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
